fix: Use separate i18n keys for singular/plural delete success title
Same i18next-cli --sync-primary workaround as the restore title:
use explicit success-single/success-multiple keys instead of
count-based pluralization.

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -3966,8 +3966,8 @@
       "tags-column": "Tags"
     },
     "delete": {
-      "success_one": "Dashboard deleted",
-      "success_other": "Dashboard deleted",
+      "success-multiple": "Dashboards deleted",
+      "success-single": "Dashboard deleted",
       "view-recently-deleted": "View deleted dashboards"
     },
     "delete-folder": {
