--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -13010,6 +13010,11 @@
       "transformation": "Transformation"
     },
     "sidebar": {
+      "add-below": "Add below {{id}}",
+      "add-expression": "Add expression",
+      "add-query": "Add query",
+      "add-saved-query": "Add saved query",
+      "back": "Back",
       "card-click": "Select card {{id}}",
       "queries-expressions": "Queries & Expressions",
       "query-stack": "Query Stack",
