Alerting: Add policy selector in the alert rule form (#117464)
* Add policy selector in the alert rule form

* add tests

* update translations

* Improve PolicyTreeSelector UX with collapsed/expanded views

- Collapse policy selector by default when using the default policy
  - Shows a 'Default policy' badge with a 'Change' button
  - Avoids confusing existing users after upgrade
- Expand dropdown automatically when a custom policy is selected
- Add 'Reset to default' button to quickly return to default policy
- Remove redundant 'Notification policy' heading for cleaner UI

* update translations

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -2375,6 +2375,22 @@
     "policy-page": {
       "text-subtitle": "Determine how alerts are routed to contact points for alert rules configured to use this notification policy."
     },
+    "policy-tree-selector": {
+      "aria-label": "Select notification policy",
+      "change": "Change",
+      "change-aria": "Change notification policy",
+      "custom-policy-desc": "Route alerts through the {{name}} policy tree",
+      "default-badge": "Default policy",
+      "default-info": "Alert instances are routed using the default notification policy tree.",
+      "default-policy": "Default policy",
+      "default-policy-desc": "Routes alerts using the default notification policy tree",
+      "description": "Select which notification policy tree should handle routing for this alert rule.",
+      "placeholder": "Select a policy...",
+      "reset": "Reset to default",
+      "reset-aria": "Reset to default policy",
+      "view-policies": "View policies",
+      "view-policies-aria": "View notification policies"
+    },
     "preview-rule": {
       "body-preview-is-not-available": "Cannot display the query preview. Some of the data sources used in the queries are not available.",
       "preview-alerts": "Preview alerts",
