Alerting: Add Edit/Export actions to group rows, clickable folders, and square icon for recording rules
- Add Edit button and Export menu to Grafana-managed group rows
- Add Edit button to datasource-managed group rows
- Make folder names clickable links to the dashboard folder alerting tab with return-to-previous support
- Remove redundant "View folder" action from folder actions menu
- Change recording rule icon from record-audio to square-shape for better visual distinction

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -1918,10 +1918,6 @@
         "export": {
           "aria-label": "Export rules folder",
           "label": "Export rules folder"
-        },
-        "view": {
-          "aria-label": "View folder",
-          "label": "View folder"
         }
       },
       "no-prom-or-loki-rules": "There are no Prometheus or Loki data sources configured",
@@ -2747,9 +2743,11 @@
         "description": "Check the data source configuration. Does the data source support Prometheus API?",
         "title": "Unable to load rules from this data source"
       },
+      "edit-group": "Edit",
       "empty-data-source": "No rules found",
       "error-button": "Error",
       "export-all-grafana-rules": "Export all Grafana rules",
+      "export-group": "Export rules group",
       "filter-view": {
         "cancel-search": "Cancel search",
         "no-more-results": "No more results – found {{numberOfRules}} rules",
