Restore dashboards: Add links to restored targets (#117482)
* Restore Dashboards: Show links to restored dashboards

* Restore dashboards: linkable delete/restore toasts

* Defer delete cache clears to after loop

* Refine notification button usage and messages

* Use LinkButton for notification actions

* i18n

* Move text into notification button

* fix: Use singular i18n fallback in restore notification tests

Tests use the singular fallback from t() since pluralization
is handled by the i18n framework at runtime, not in tests.

* fix: Ensure cache cleanup on partial delete failure and use subpath-safe URLs

Wrap delete loop in try/finally so cache invalidation always runs
for already-deleted dashboards even if a later delete throws.

Prefix notification action URLs with config.appSubUrl to support
subpath installs, matching existing patterns in FolderDetailsActions.

* test: Add appSubUrl tests for restore notification URLs

* refactor: Move RestoreNotificationData type to browse-dashboards types.ts

* i18n

* fix: Use separate i18n keys for singular/plural restore success title

The i18next-cli --sync-primary flag overwrites _other plural forms
with the code's fallback when the string doesn't contain {{count}}.
Use explicit success-single/success-multiple keys instead of
count-based pluralization to avoid this.

* fix: Use separate i18n keys for singular/plural delete success title

Same i18next-cli --sync-primary workaround as the restore title:
use explicit success-single/success-multiple keys instead of
count-based pluralization.

* chore: Add comment explaining provisioned dashboard guard in bulk delete

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -3968,6 +3968,11 @@
       "select-checkbox": "Select",
       "tags-column": "Tags"
     },
+    "delete": {
+      "success-multiple": "Dashboards deleted",
+      "success-single": "Dashboard deleted",
+      "view-recently-deleted": "View deleted dashboards"
+    },
     "delete-folder": {
       "read-only-message": "To delete this folder, please remove the folder from your repository."
     },
@@ -4052,11 +4057,15 @@
     },
     "restore": {
       "all-failed_one": "Failed to restore {{count}} dashboard.",
-      "all-failed_other": "Failed to restore {{count}} dashboard.",
+      "all-failed_other": "Failed to restore {{count}} dashboards.",
       "failed-count_one": "{{count}} dashboard failed",
       "failed-count_other": "{{count}} dashboards failed",
       "success-count_one": "{{count}} dashboard restored successfully",
-      "success-count_other": "{{count}} dashboard restored successfully"
+      "success-count_other": "{{count}} dashboards restored successfully",
+      "success-multiple": "Dashboards restored",
+      "success-single": "Dashboard restored",
+      "view-dashboard": "View dashboard",
+      "view-folder": "View folder"
     },
     "text-this-repository-is-read-only": "If you have direct access to the target, copy the JSON and paste it there.",
     "trash-state-manager": {
