Provisioning: update Bitbucket token copy

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12143,10 +12143,10 @@
       },
       "pr-workflow-description": "Allows users to choose whether to open a pull request when saving changes. If the repository does not allow direct changes to the main branch, a pull request may still be required.",
       "pr-workflow-label": "Enable pull request option when saving",
-      "token-description": "Bitbucket Repository Access Token or App Password with repository permissions",
-      "token-label": "Repository Access Token",
+      "token-description": "Bitbucket App Password with repository permissions",
+      "token-label": "App Password",
       "token-required": "Bitbucket token is required",
-      "token-user-description": "Your Bitbucket username for App Passwords, or \"x-token-auth\" for Repository Access Tokens",
+      "token-user-description": "The username that will be used to access the repository with the app password",
       "token-user-required": "Username is required",
       "url-description": "The Bitbucket repository URL",
       "url-pattern": "Must be a valid Bitbucket repository URL",
