Provisioning Onboard Wizard: Allow all git types start with connect step (#117722)
* Provisioning Onboard Wizard: Allow all git types start with connect step

---------

Co-authored-by: Roberto Jimenez Sanchez <roberto.jimenez@grafana.com>

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12747,6 +12747,7 @@
       "button-next": "Finish",
       "button-start": "Begin synchronization",
       "connect-step": "Connect",
+      "connect-step-local": "File provisioning",
       "connection-not-ready": "The selected GitHub App connection is not ready. List will be refreshed once the connection is ready.",
       "discard-modal": {
         "body": "This will delete the repository configuration and you will lose all progress. Are you sure you want to discard your changes?",
