--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -4014,6 +4014,7 @@
       "root-title": "Dashboards",
       "search-placeholder": "Search folders",
       "shared-with-me": "Shared with me",
+      "team-folders": "Team folders",
       "unknown-error": "Unknown error"
     },
     "manage-folder-nav": {
