--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12463,8 +12463,8 @@
       "success-all-repositories-deleted": "All configured repositories deleted",
       "tab-connections": "Connections",
       "tab-connections-title": "List of connections",
-      "tab-getting-started": "Getting started",
-      "tab-getting-started-title": "Getting started",
+      "tab-getting-started": "Get started",
+      "tab-getting-started-title": "Get started",
       "tab-repositories": "Repositories",
       "tab-repositories-title": "List of repositories",
       "title-delete-all-configured-repositories": "Delete all configured repositories"
