feat: Add heatmap Explore UI for Pyroscope

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -7660,6 +7660,7 @@
     "explore": {
       "title-flame-graph": "Flame graph",
       "title-graph": "Graph",
+      "title-heatmap": "Heatmap",
       "title-logs": "Logs",
       "title-logs-sample": "Logs sample",
       "title-node-graph": "Node graph",
@@ -7716,6 +7717,9 @@
     },
     "get-matches-metadata": {
       "matches": "0 matches"
+    },
+    "heatmap": {
+      "view-span-profile": "View span profile"
     },
     "legacy-create-span-link-factory": {
       "text": {
@@ -9760,6 +9764,9 @@
     "category-legend": "Legend",
     "category-tooltip": "Tooltip",
     "category-y-axis": "Y Axis",
+    "container": {
+      "title": "Heatmap"
+    },
     "error": {
       "no-y-fields": "No numeric fields found for heatmap"
     },
