Provisioning: Hide version restore for repository-managed dashboards (#117775)
* Dashboard: Hide version restore for repository-managed dashboards

When a dashboard is managed by a repository, disable the version restore functionality and show a warning message directing users to use the repository's Git history instead.

* i18n: Fix plural forms for dashboard restore messages

* i18n

* i18n

* Update public/app/features/dashboard-scene/settings/VersionsEditView.tsx

Co-authored-by: Roberto Jiménez Sánchez <roberto.jimenez@grafana.com>

* Fix message

* i18n

---------

Co-authored-by: Roberto Jiménez Sánchez <roberto.jimenez@grafana.com>

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -934,10 +934,10 @@
         "parse-mode-warning-body": "If you use a <1>parse_mode</1> option other than <3>None</3>, truncation may result in an invalid message, causing the notification to fail. For longer messages, we recommend using an alternative contact method.",
         "parse-mode-warning-title": "Telegram messages are limited to 4096 UTF-8 characters."
       },
-      "used-by_one": "Used by {{ count }} notification policy",
-      "used-by_other": "Used by {{ count }} notification policies",
-      "used-by-rules_one": "Used by {{ count }} alert rule",
-      "used-by-rules_other": "Used by {{ count }} alert rules"
+      "used-by_one": "Used by {{count}} notification policy",
+      "used-by_other": "Used by {{count}} notification policies",
+      "used-by-rules_one": "Used by {{count}} alert rule",
+      "used-by-rules_other": "Used by {{count}} alert rules"
     },
     "contact-points-filter": {
       "aria-label-clear": "clear",
@@ -5855,6 +5855,7 @@
       "title": "Variables"
     },
     "versions": {
+      "provisioned-warning": "This dashboard is managed by a repository. Version history is not available for provisioned dashboards.",
       "title": "Versions"
     }
   },
