--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -5812,6 +5812,8 @@
     "general": {
       "auto-refresh-description": "Define the auto refresh intervals that should be available in the auto refresh list. Use the format '5s' for seconds, '1m' for minutes, '1h' for hours, and '1d' for days (e.g.: '5s,10s,30s,1m,5m,15m,30m,1h,2h,1d').",
       "auto-refresh-label": "Auto refresh",
+      "default-grid-description": "Pick what grid type to be used for new rows and tabs",
+      "default-grid-label": "Default grid",
       "description-label": "Description",
       "editable-description": "Set to read-only to disable all editing. Reload the dashboard for changes to take effect",
       "editable-label": "Editable",
